@@ -1,6 +1,6 @@
 /* StatServ core functions
  *
- * (c) 2004-2012 Denora Team
+ * (c) 2004-2013 Denora Team
  * Contact us at info@denorastats.org
  *
  * Please read COPYING and README for furhter details.
@@ -29,6 +29,7 @@ void DenoraFini(void);
 int DenoraInit(int argc, char **argv)
 {
 	Command *c;
+	int status;
 
 	if (denora->debug >= 2)
 	{
@@ -40,12 +41,24 @@ int DenoraInit(int argc, char **argv)
 
 	c = createCommand("LOGIN", do_login, is_oper, STAT_HELP_LOGIN, -1, -1,
 	                  -1);
-	moduleAddCommand(STATSERV, c, MOD_UNIQUE);
-
+	status = moduleAddCommand(STATSERV, c, MOD_UNIQUE);
+	if (status != MOD_ERR_OK)
+	{
+		alog(LOG_NORMAL,
+		     "Error Occurred setting Command for LOGIN [%d][%s]",
+		     status, ModuleGetErrStr(status));
+		return MOD_STOP;
+	}
 	c = createCommand("LOGOUT", do_logout, NULL, STAT_HELP_LOGOUT, -1, -1,
 	                  -1);
-	moduleAddCommand(STATSERV, c, MOD_UNIQUE);
-
+	status = moduleAddCommand(STATSERV, c, MOD_UNIQUE);
+	if (status != MOD_ERR_OK)
+	{
+		alog(LOG_NORMAL,
+		     "Error Occurred setting Command for LOGOUT [%d][%s]",
+		     status, ModuleGetErrStr(status));
+		return MOD_STOP;
+	}
 	return MOD_CONT;
 }
 
