@@ -1,6 +1,6 @@
 /* StatServ core functions
  *
- * (c) 2004-2012 Denora Team
+ * (c) 2004-2013 Denora Team
  * Contact us at info@denorastats.org
  *
  * Please read COPYING and README for furhter details.
@@ -28,6 +28,7 @@ void DenoraFini(void);
 int DenoraInit(int argc, char **argv)
 {
 	Command *c;
+	int status;
 
 	if (denora->debug >= 2)
 	{
@@ -39,7 +40,15 @@ int DenoraInit(int argc, char **argv)
 
 	c = createCommand("STATUS", do_status, is_oper, -1, -1, -1,
 	                  STAT_HELP_STATUS);
-	moduleAddCommand(STATSERV, c, MOD_UNIQUE);
+	status = moduleAddCommand(STATSERV, c, MOD_UNIQUE);
+	if (status != MOD_ERR_OK)
+	{
+		alog(LOG_NORMAL,
+		     "Error Occurred setting Command for STATUS [%d][%s]",
+		     status, ModuleGetErrStr(status));
+		return MOD_STOP;
+	}
+
 
 	return MOD_CONT;
 }
